--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "private": true,
   "scripts": {
     "start": "hexo serve",
-    "deploy": "hexo clean && hexo deploy"
+    "new": "hexo new ",
+    "publish": "hexo clean && hexo deploy"
   },
   "hexo": {
     "version": "3.5.0"
