--- a/_config.yml
+++ b/_config.yml
@@ -73,7 +73,8 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 #theme: landscape
-theme: alpha-dust
+# theme: alpha-dust
+theme: phantom
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
